--- a/portfolio.html
+++ b/portfolio.html
@@ -23,21 +23,21 @@
   <body>
     <header class="header">
       <div class="header-container container">
-        <a class="link logo" href="" lang="en">Web<span style="color: #000000">Studio</span></a>
+        <a class="link logo" href="" lang="en">Web<span class="logo-black">Studio</span></a>
         <nav class="main-nav">
           <ul class="nav-list list">
             <li class="nav-list-item">
-              <a class="nav-list-link link" href="./index.html">Студия</a>
+              <a class="header-link link" href="./index.html">Студия</a>
             </li>
             <li class="nav-list-item">
-              <a class="active-link nav-list-link link" href="./portfolio.html">Портфолио</a>
+              <a class="active-link header-link link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li class="nav-list-item"><a class="nav-list-link link" href="">Контакты</a></li>
+            <li class="nav-list-item"><a class="header-link link" href="">Контакты</a></li>
           </ul>
         </nav>
         <ul class="header-address-list list">
           <li class="header-address-item">
-            <a class="link" lang="en" href="mailto:info@devstudio.com">
+            <a class="header-link link" lang="en" href="mailto:info@devstudio.com">
               <svg class="header-address-icon" width="16" height="12">
                 <use href="./images/sprite.svg#icon-envelope"></use>
               </svg>
@@ -45,7 +45,7 @@
             >
           </li>
           <li class="header-address-item">
-            <a class="link" href="tel:+380961111111">
+            <a class="header-link link" href="tel:+380961111111">
               <svg class="header-address-icon" width="10" height="16">
                 <use href="./images/sprite.svg#icon-smartphone"></use>
               </svg>
@@ -57,12 +57,12 @@
     </header>
     <main>
       <section class="examples">
-        <div class="examples-container container">
-          <h1 class="main-title visually-hidden">Примеры работ</h1>
+        <div class="container">
+          <h1 class="visually-hidden">Примеры работ</h1>
           <!--заголовок спрятан-->
           <ul class="examples-btns-list list">
             <li class="example-btn-item">
-              <button class="example-btn" type="button">Все</button>
+              <button class="active-btn example-btn" type="button">Все</button>
             </li>
             <li class="example-btn-item">
               <button class="example-btn" type="button">Веб-сайты</button>
@@ -77,106 +77,151 @@
               <button class="example-btn" type="button">Маркетинг</button>
             </li>
           </ul>
-          <ul class="examples-links-list list">
-            <li class="examples-link-item">
-              <a class="link example-link" href="">
+          <ul class="card-set list">
+            <li class="examples-link-item card-set-item">
+              <a
+                class="example-link link"
+                href=""
+                rel="noopener noreferrer nofollow"
+                target="_blank"
+              >
                 <img width="370" src="./images/parfolio/img.jpg" alt="сайт - 'Техноряк'" />
                 <div class="example-description">
-                  <h2 class="example-name">Технокряк</h2>
+                  <h3 class="example-name">Технокряк</h3>
                   <p class="example-type">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="examples-link-item">
-              <a class="link example-link" href="">
+            <li class="examples-link-item card-set-item">
+              <a
+                class="example-link link"
+                href=""
+                rel="noopener noreferrer nofollow"
+                target="_blank"
+              >
                 <img
                   width="370"
                   src="./images/parfolio/img-1.jpg"
                   alt="дизайн постера - 'New Orlean vs Golden Star'"
                 />
                 <div class="example-description">
-                  <h2 class="example-name">
+                  <h3 class="example-name">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
-                  </h2>
+                  </h3>
                   <p class="example-type">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="examples-link-item">
-              <a class="link example-link" href="">
+            <li class="examples-link-item card-set-item">
+              <a
+                class="example-link link"
+                href=""
+                rel="noopener noreferrer nofollow"
+                target="_blank"
+              >
                 <img
                   width="370"
                   src="./images/parfolio/img-2.jpg"
                   alt="приложение - 'Ресторан Seafood'"
                 />
                 <div class="example-description">
-                  <h2 class="example-name">Ресторан <span lang="en">Seafood</span></h2>
+                  <h3 class="example-name">Ресторан <span lang="en">Seafood</span></h3>
                   <p class="example-type">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="examples-link-item">
-              <a class="link example-link" href="">
+            <li class="examples-link-item card-set-item">
+              <a
+                class="example-link link"
+                href=""
+                rel="noopener noreferrer nofollow"
+                target="_blank"
+              >
                 <img width="370" src="./images/parfolio/img-3.jpg" alt="проект - 'Prime'" />
                 <div class="example-description">
-                  <h2 class="example-name">Проект <span lang="en">Prime</span></h2>
+                  <h3 class="example-name">Проект <span lang="en">Prime</span></h3>
                   <p class="example-type">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="examples-link-item">
-              <a class="link example-link" href="">
+            <li class="examples-link-item card-set-item">
+              <a
+                class="example-link link"
+                href=""
+                rel="noopener noreferrer nofollow"
+                target="_blank"
+              >
                 <img width="370" src="./images/parfolio/img-4.jpg" alt="проект - 'Boxes'" />
                 <div class="example-description">
-                  <h2 class="example-name">Проект <span lang="en">Boxes</span></h2>
+                  <h3 class="example-name">Проект <span lang="en">Boxes</span></h3>
                   <p class="example-type">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="examples-link-item">
-              <a class="link example-link" href="">
+            <li class="examples-link-item card-set-item">
+              <a
+                class="example-link link"
+                href=""
+                rel="noopener noreferrer nofollow"
+                target="_blank"
+              >
                 <img
                   width="370"
                   src="./images/parfolio/img-5.jpg"
                   alt="сайт - 'Inspiration has no Borders'"
                 />
                 <div class="example-description">
-                  <h2 lang="en" class="example-name">Inspiration has no Borders</h2>
+                  <h3 lang="en" class="example-name">Inspiration has no Borders</h3>
                   <p class="example-type">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="examples-link-item">
-              <a class="link example-link" href="">
+            <li class="examples-link-item card-set-item">
+              <a
+                class="example-link link"
+                href=""
+                rel="noopener noreferrer nofollow"
+                target="_blank"
+              >
                 <img
                   width="370"
                   src="./images/parfolio/img-6.jpg"
                   alt="дизайн - 'Limited Edition'"
                 />
                 <div class="example-description">
-                  <h2 class="example-name">Издание <span lang="en">Limited Edition</span></h2>
+                  <h3 class="example-name">Издание <span lang="en">Limited Edition</span></h3>
                   <p class="example-type">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="examples-link-item">
-              <a class="link example-link" href="">
+            <li class="examples-link-item card-set-item">
+              <a
+                class="example-link link"
+                href=""
+                rel="noopener noreferrer nofollow"
+                target="_blank"
+              >
                 <img width="370" src="./images/parfolio/img-7.jpg" alt="проект 'LAB'" />
                 <div class="example-description">
-                  <h2 class="example-name">Проект <span lang="en">LAB</span></h2>
+                  <h3 class="example-name">Проект <span lang="en">LAB</span></h3>
                   <p class="example-type">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="examples-link-item">
-              <a class="link example-link" href="">
+            <li class="examples-link-item card-set-item">
+              <a
+                class="example-link link"
+                href=""
+                rel="noopener noreferrer nofollow"
+                target="_blank"
+              >
                 <img
                   width="370"
                   src="./images/parfolio/img-8.jpg"
                   alt="приложение - 'Growing Business'"
                 />
                 <div class="example-description">
-                  <h2 lang="en" class="example-name">Growing Business</h2>
+                  <h3 lang="en" class="example-name">Growing Business</h3>
                   <p class="example-type">Приложение</p>
                 </div>
               </a>
@@ -187,11 +232,20 @@
     </main>
     <footer class="footer">
       <div class="footer-container container">
-        <div>
-          <a class="link logo" href="" lang="en">Web<span style="color: #ffffff">Studio</span></a>
+        <div class="footer-item">
+          <a class="logo-footer logo link" href="" lang="en"
+            >Web<span class="logo-white">Studio</span></a
+          >
           <address class="address">
-            <p class="location">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="footer-address-list list">
+            <a
+              class="location link"
+              href="https://goo.gl/maps/g2zWgCWJMkvT7kyo8"
+              rel="noopener noreferrer nofollow"
+              target="_blank"
+            >
+              г. Киев, пр-т Леси Украинки, 26
+            </a>
+            <ul class="list">
               <li class="footer-address-item" lang="en">
                 <a class="link footer-email-address" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
@@ -203,33 +257,53 @@
             </ul>
           </address>
         </div>
-        <div class="footer-links">
-          <h3 class="footer-title subtitle"><strong>Присоединяйтесь</strong></h3>
-          <ul class="footer-links-list soc-links-list list">
+        <div class="footer-item footer-links">
+          <h3 class="footer-title"><strong>Присоединяйтесь</strong></h3>
+          <ul class="soc-links-list list">
             <li class="soc-link-item">
-              <a class="footer-link link soc-link" href="">
-                <svg width="20" height="20">
+              <a
+                class="footer-link link soc-link"
+                rel="noopener noreferrer nofollow"
+                target="_blank"
+                href=""
+              >
+                <svg class="footer-svg" width="20" height="20">
                   <use href="./images/sprite.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="soc-link-item">
-              <a class="footer-link link soc-link" href="">
-                <svg width="20" height="20">
+              <a
+                class="footer-link link soc-link"
+                rel="noopener noreferrer nofollow"
+                target="_blank"
+                href=""
+              >
+                <svg class="footer-svg" width="20" height="20">
                   <use href="./images/sprite.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="soc-link-item">
-              <a class="footer-link link soc-link" href="">
-                <svg width="20" height="20">
+              <a
+                class="footer-link link soc-link"
+                rel="noopener noreferrer nofollow"
+                target="_blank"
+                href=""
+              >
+                <svg class="footer-svg" width="20" height="20">
                   <use href="./images/sprite.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="soc-link-item">
-              <a class="footer-link link soc-link" href="">
-                <svg width="20" height="20">
+              <a
+                class="footer-link link soc-link"
+                rel="noopener noreferrer nofollow"
+                target="_blank"
+                href=""
+              >
+                <svg class="footer-svg" width="20" height="20">
                   <use href="./images/sprite.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
